Fixed overlapping when it came to the nav bar, also added a table using JS functions rather than html

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
-margin: 0;
-background-color: #1a1717;
-
+    margin: 0;
+    background-color: #1a1717;
+    color: white;
 }
 
 .header {
@@ -10,7 +10,7 @@ background-color: #1a1717;
     height: 380px;
     margin: -10px 0 0 0;
     background-repeat: no-repeat;
-    background-position: center;  
+    background-position: center;
 }
 
 .company-logo {
@@ -22,7 +22,6 @@ background-color: #1a1717;
     position: fixed;
 }
 
-
 .main-nav {
     background: white;
     opacity: .8;
@@ -33,34 +32,31 @@ background-color: #1a1717;
     width: 100%;
 }
 
-
-
 .header p {
-    color: black;    
+    color: black;
     text-align: center;
     font-family: 'Bungee Outline', cursive;
     font-size: 30px;
     margin: -8px;
 }
 
-
 .header .m-plus {
     display: none;
-    color: black;    
+    color: black;
     font-family: 'Bungee Outline', cursive;
     font-size: 30px;
-    margin: 0 0 0 115px ;
+    margin: 0 0 0 115px;
 }
 
 .tabs {
     float: right;
     font-size: 19px;
-    
+    padding-right: 10px;
 }
 
 .tabs li {
     display: inline;
-    margin: -7pxx;
+    margin: 5px;
     font-weight: 100;
 }
 
@@ -68,27 +64,15 @@ background-color: #1a1717;
     list-style: none;
     text-decoration: none;
     color: black;
-    padding: 10px;
-    margin: 2px;
- 
+    padding: 4px;
 }
 
-.tabs li a:hover {
-    background-color: skyblue;
-    padding: 5px;
-    color: black
-    height: 30px;
-}
-
-.tabs li a:visited{
+.tabs li a:visited {
     color: #b15555;
 }
 
-.tabs a.selected {
-    background-color: skyblue;
-    color: black;
-    padding: 5px;
-    height: 30px;
+.tabs li a:hover {
+    color: #938d8d;
 }
 
 h1 {
@@ -96,96 +80,165 @@ h1 {
     text-align: center
 }
 
-.intro-para{
+.intro-para {
     color: aliceblue;
     padding: 13px;
+    margin: 25px;
 }
 
+
+/****
+timeTable
+****/
+
+
+.timeTable table {
+    table-layout: fixed;
+    width: 100%;
+    border-collapse: collapse; /* stops hurting my eyes with seperate cells*/
+    
+}
+
+.timeTable td {
+    text-align: center;
+    border: 1px solid white;
+    padding: 5px
+
+    
+}
+
+.timeTable tr:first-child td, /* first table row  and targeted each cell within that row*/
+.timeTable td:first-child {  /* first data for each row*/
+    background-color: gray;
+    
+}
+
+
+
+/****
+The Team
+****/
+
+.images {
+    width: 100%;
+    padding: 0;
+}
+
+.images li img {
+    width: 100%;
+}
+
+.images li {
+    list-style: none;
+    border-radius: 10%;
+    float: left;
+}
+
+
+.images li:nth-child(2){
+    margin-left: 10%;
+}
+
+.images li:last-child{
+    margin-right: 10%;
+}
+
+
+
+.picPat,
+.picfloyd {
+   width: 35%;
+   margin: 0 5%;
+}
+
+
+/****
+contact page
+****/
+
+.main-contact li {
+    list-style-type: none;
+    padding: 13px;
+    margin: 13px;
+}
+
+.main-contact li a:hover {
+    padding: 20px 20px 20px 0;
+}
+
+.main-contact a {
+    color: lightblue;
+}
+
+.main-contact h3 {
+    text-align:
+}
 
 #menu-icon {
- background: url(images/main-nav.png) no-repeat center;
- display: hidden;
- width: 32px;
- height: 32px;
+    background: url(images/main-nav.png) no-repeat center;
+    display: hidden;
+    width: 32px;
+    height: 32px;
 }
 
-
 footer {
-    padding: 10px 0 50px 0;
-    clear: both;
     text-align: center;
-    bottom:0;
-    width:100%;
-    height:20px;
+    bottom: 0;
+    width: 100%;
     color: skyblue;
-    margin-top:30px;
-
+    clear: both;
 }
 
 .social-icon {
     width: 30px;
     height: 30px;
-    margin: 0 auto;
+    margin-top: 150px;
+    /* is this the best way to keep it down?*/
     border-radius: 50%;
     background: skyblue;
 }
 
-
-@media only screen and (max-width : 500px) {
-  
-.header p{
-    display: none;
+@media only screen and (max-width: 560px) {
+    .header p {
+        display: none;
     }
-    
-.header .m-plus{
-    display:inline;
-        
+    .header .m-plus {
+        display: inline;
     }
-    
-#menu-icon {
-     display:inline-block;
-     float: right;
-     margin: 0px 12px;
-}
- 
- .main-nav .tabs, nav:active .tabs { 
-     display: none;
-     position: absolute;
-     padding: 20px;
-     background: #c5c5c5;
-     margin:0;
-     right: 0;
-     top: 65px;
-     width: 35%;
- }
-
- .main-nav:hover .tabs
-
-    {
-     display: block;
-     
- }
-
+    #menu-icon {
+        display: inline-block;
+        float: right;
+        margin: 0px 12px;
+    }
+    .main-nav .tabs,
+    nav:active .tabs {
+        display: none;
+        position: absolute;
+        padding: 20px;
+        background: #c5c5c5;
+        margin: 0;
+        right: 0;
+        top: 65px;
+        width: 35%;
+    }
+    .main-nav:hover .tabs {
+        display: block;
+    }
     .tabs li a {
         display: block;
         padding: 2px;
     }
-
- 
- .main-nav li {
-     text-align: center;
-     width: 100%;
-     padding: 15px 0;
-     margin: 0;
-     word-wrap: break-word;
- }
-
+    .main-nav li {
+        text-align: center;
+        width: 100%;
+        padding: 15px 0;
+        margin: 0;
+        word-wrap: break-word;
+    }
 }
 
-@media only screen and (max-width : 320px) {
-    
-    .header .m-plus{
-    font-size: 20px;
-        
+@media only screen and (max-width: 320px) {
+    .header .m-plus {
+        font-size: 20px;
     }
 }
